Fixed minor display bug and added a little styling.

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,6 +5,7 @@
   <title>Solo Project</title>
 
   <link rel="stylesheet" href="vendors/bootstrap.min.css" media="screen" title="no title">
+  <link rel="stylesheet" href="vendors/xeditable.min.css">
   <script src="vendors/angular.min.js" charset="utf-8"></script>
   <script src="vendors/angular-route.min.js" charset="utf-8"></script>
   <script src="bootstrap.min.js" charset="utf-8"></script>
@@ -16,6 +17,7 @@
   <script src="scripts/auth.service.js" charset="utf-8"></script>
   <script src="scripts/create.controller.js" charset="utf-8"></script>
   <script src="scripts/view.controller.js" charset="utf-8"></script>
+  <script src="vendors/xeditable.min.js" charset="utf-8"></script>
   <link rel="stylesheet" href="/css/styles.css">
 
 
